adding a toast message prompting the user to update Simple Thank You

--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -449,6 +449,7 @@
         ]]>
     </string>
     <string name="purchase">구매</string>
+    <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
