--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -446,6 +446,7 @@
         ]]>
     </string>
     <string name="purchase">Köp</string>
+    <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
