--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -465,6 +465,7 @@
         ]]>
     </string>
     <string name="purchase">Zakúpiť</string>
+    <string name="update_thank_you">Prosím aktualizujte Jednoduché Ďakujem na najnovšiu verziu</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
