--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -446,7 +446,7 @@
         ]]>
     </string>
     <string name="purchase">Kopen</string>
-    <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
+    <string name="update_thank_you">Er is een nieuwe versie van Simple Thank You</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
