--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -315,8 +315,8 @@
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
     <string name="alarm_goes_off_in">Resterende tid før alarmen lyder:\n%s</string>
-    <string name="alarm_warning">Du anbefales sikre dig at alarmen virker som den skal inden du stoler på den. Den kan skuffe i kraft af strømbesparende begrænsninger på systemet.</string>
-    <string name="reminder_warning">Du anbefales sikre dig at påmindelser virker som de skal inden du stoler på dem. De kan skuffe i kraft af strømbesparende begrænsninger på systemet.</string>
+    <string name="alarm_warning">Du anbefales sikre dig at alarmen virker som den skal inden du stoler på den. Den kan drille som følge af strømbesparende begrænsninger på systemet.</string>
+    <string name="reminder_warning">Du anbefales sikre dig at påmindelser virker som de skal inden du stoler på dem. De kan drille som følge af strømbesparende begrænsninger på systemet.</string>
 
     <!-- Alarms -->
     <string name="alarm">Alarm</string>
@@ -446,7 +446,7 @@
         ]]>
     </string>
     <string name="purchase">Køb</string>
-    <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
+    <string name="update_thank_you">Opdater venligst Simple Thank You til den seneste version</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
