--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -473,7 +473,7 @@
         ]]>
     </string>
     <string name="purchase">Купить</string>
-    <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
+    <string name="update_thank_you">Пожалуйста, обновите \"Simple Thank You\" до последней версии.</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
