adding a new string about customizing widget colors

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -334,6 +334,7 @@
     <!-- Settings -->
     <string name="settings">Ajustaments</string>
     <string name="customize_colors">Canviar colors</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Usar l’idioma Anglès</string>
     <string name="avoid_whats_new">Permetre mostrar novetats a l\'inici</string>
     <string name="show_hidden_items">Mostra elements ocults</string>
