--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -349,6 +349,7 @@
     <!-- Settings -->
     <string name="settings">Nastavení</string>
     <string name="customize_colors">Přizpůsobit barvy</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Use English language</string>
     <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
     <string name="show_hidden_items">Zobrazit skryté položky</string>
