--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Indstillinger</string>
     <string name="customize_colors">Rediger farver</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Use English language</string>
     <string name="avoid_whats_new">Vis ikke seneste ændringer ved opstart</string>
     <string name="show_hidden_items">Vis skjulte elementer</string>
