--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">App in Englisch verwenden</string>
     <string name="avoid_whats_new">Beim Start \"Neue Funktionen\" nicht anzeigen</string>
     <string name="show_hidden_items">Versteckte Elemente anzeigen</string>
