--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Paramètres</string>
     <string name="customize_colors">Personnaliser les couleurs</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Utiliser l\'affichage en anglais</string>
     <string name="avoid_whats_new">Ne pas montrer les nouveautés au démarrage</string>
     <string name="show_hidden_items">Afficher les éléments cachés</string>
