--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -351,6 +351,7 @@
     <!-- Settings -->
     <string name="settings">Postavke</string>
     <string name="customize_colors">Prilagodi boje</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Koristi Engleski jezik</string>
     <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
     <string name="show_hidden_items">Show hidden items</string>
