--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Pengaturan</string>
     <string name="customize_colors">Sesuaikan Warna</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Gunakan Bahasa Inggris</string>
     <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
     <string name="show_hidden_items">Show hidden items</string>
