--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Impostazioni</string>
     <string name="customize_colors">Personalizza i colori</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Forza la lingua inglese</string>
     <string name="avoid_whats_new">Non mostrare le novità all\'avvio</string>
     <string name="show_hidden_items">Mostra gli elementi nascosti</string>
