--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Innstillinger</string>
     <string name="customize_colors">Tilpass farger</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Bruk engelsk språk</string>
     <string name="avoid_whats_new">Ikke vis \'Hva er nytt\' ved oppstart</string>
     <string name="show_hidden_items">Vis skjulte elementer</string>
