--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Inställningar</string>
     <string name="customize_colors">Anpassa färger</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Använd engelska</string>
     <string name="avoid_whats_new">Visa inte vad som är nytt vid start</string>
     <string name="show_hidden_items">Visa dolda objekt</string>
