--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Ayarlar</string>
     <string name="customize_colors">Renkleri özelleştir</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">İngilizce dilini kullan</string>
     <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
     <string name="show_hidden_items">Gizli öğeleri göster</string>
