--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">设置</string>
     <string name="customize_colors">自定义颜色</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">强制使用英语语言</string>
     <string name="avoid_whats_new">启动时不再显示更新内容</string>
     <string name="show_hidden_items">显示隐藏的项目</string>
