--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -331,6 +331,7 @@
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="customize_colors">自訂顏色</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">強制使用英語</string>
     <string name="avoid_whats_new">啟動時不顯示更新了什麼</string>
     <string name="show_hidden_items">顯示隱藏的項目</string>
