--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Asetukset</string>
     <string name="customize_colors">Muokkaa sovelluksen värejä</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Käytä Englannin kieltä</string>
     <string name="avoid_whats_new">Älä näytä uutisia aloituksen yhteydessä</string>
     <string name="show_hidden_items">Näytä piilotetut tiedostot</string>
