--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -331,6 +331,7 @@
     <!-- Settings -->
     <string name="settings">Ajustes</string>
     <string name="customize_colors">Cambiar colores</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Usar el idioma Inglés</string>
     <string name="avoid_whats_new">Permitir mostrar novedades al iniciar</string>
     <string name="show_hidden_items">Mostrar elementos ocultos</string>
