--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -349,6 +349,7 @@
     <!-- Settings -->
     <string name="settings">Nustatymai</string>
     <string name="customize_colors">Spalvų redagavimas</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Naudoti anglų kalbą</string>
     <string name="avoid_whats_new">Nerodyti "Kas nauja" paleidus programėlę</string>
     <string name="show_hidden_items">Rodyti paslėptus elementus</string>
