--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -332,6 +332,7 @@
     <!-- Settings -->
     <string name="settings">Definições</string>
     <string name="customize_colors">Personalizar cores</string>
+    <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Utilizar aplicação em inglês</string>
     <string name="avoid_whats_new">Não mostrar as novidades ao iniciar</string>
     <string name="show_hidden_items">Mostrar itens ocultos</string>
