--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -351,6 +351,7 @@
     <!-- Settings -->
     <string name="settings">Nastavenia</string>
     <string name="customize_colors">Upraviť farby</string>
+    <string name="customize_widget_colors">Upraviť farby widgetov</string>
     <string name="use_english_language">Použiť angličtinu</string>
     <string name="avoid_whats_new">Nikdy nezobrazovať Novinky po spustení</string>
     <string name="show_hidden_items">Zobraziť skryté položky</string>
