--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -15,7 +15,7 @@
     <string name="never">Mai</string>
     <string name="details">Detalls</string>
     <string name="notes">Notes</string>
-    <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="deleting_folder">S'està eliminant la carpeta \'%s\'</string>
 
     <!-- Search -->
     <string name="search">Buscar</string>
@@ -334,7 +334,7 @@
     <!-- Settings -->
     <string name="settings">Ajustaments</string>
     <string name="customize_colors">Canviar colors</string>
-    <string name="customize_widget_colors">Customize widget colors</string>
+    <string name="customize_widget_colors">Personalitza els colors de widgets</string>
     <string name="use_english_language">Usar l’idioma Anglès</string>
     <string name="avoid_whats_new">Permetre mostrar novetats a l\'inici</string>
     <string name="show_hidden_items">Mostra elements ocults</string>
@@ -449,7 +449,7 @@
         ]]>
     </string>
     <string name="purchase">Comprar</string>
-    <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
+    <string name="update_thank_you">Si us plau, actualitzeu Simple Thank You a la darrera versió</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
@@ -464,7 +464,7 @@
 
     <!-- FAQ -->
     <string name="frequently_asked_questions">Preguntes frequents</string>
-    <string name="before_asking_question">Before you ask a question, please first read the</string>
+    <string name="before_asking_question">Abans de fer una pregunta, primer llegeix les</string>
     <string name="faq_1_title_commons">Com és que no veig aquest widget a la llista de widgets?</string>
     <string name="faq_1_text_commons">Probablement, perquè heu mogut l\'aplicació en una targeta SD. Hi ha una limitació del sistema d\'Android que oculta els widgets de l\'aplicació determinada
         en aquest cas. L\'única solució és moure l\'aplicació a l\'emmagatzematge intern a través de la configuració del dispositiu.</string>
