--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -416,6 +416,20 @@
     <string name="november">November</string>
     <string name="december">December</string>
 
+    <!-- in January -->
+    <string name="in_january">v januári</string>
+    <string name="in_february">vo februári</string>
+    <string name="in_march">v marci</string>
+    <string name="in_april">v apríli</string>
+    <string name="in_may">v máji</string>
+    <string name="in_june">v júni</string>
+    <string name="in_july">v júli</string>
+    <string name="in_august">v auguste</string>
+    <string name="in_september">v septembri</string>
+    <string name="in_october">v októbri</string>
+    <string name="in_november">v novembri</string>
+    <string name="in_december">v decembri</string>
+
     <string name="monday">Pondelok</string>
     <string name="tuesday">Utorok</string>
     <string name="wednesday">Streda</string>
