--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -414,6 +414,20 @@
     <string name="november">listopad</string>
     <string name="december">prosinec</string>
 
+    <!-- in January -->
+    <string name="in_january">in January</string>
+    <string name="in_february">in February</string>
+    <string name="in_march">in March</string>
+    <string name="in_april">in April</string>
+    <string name="in_may">in May</string>
+    <string name="in_june">in June</string>
+    <string name="in_july">in July</string>
+    <string name="in_august">in August</string>
+    <string name="in_september">in September</string>
+    <string name="in_october">in October</string>
+    <string name="in_november">in November</string>
+    <string name="in_december">in December</string>
+
     <string name="monday">Pondělí</string>
     <string name="tuesday">Úterý</string>
     <string name="wednesday">Středa</string>
