--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -359,7 +359,7 @@
     <!-- Settings -->
     <string name="settings">Настройки</string>
     <string name="customize_colors">Настроить цвета</string>
-    <string name="customize_widget_colors">Customize widget colors</string>
+    <string name="customize_widget_colors">Настроить цвета виджета</string>
     <string name="use_english_language">Use English language</string>
     <string name="avoid_whats_new">Не показывать \"Что нового\" при запуске</string>
     <string name="show_hidden_items">Показывать скрытые папки</string>
