--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -398,18 +398,18 @@
     <string name="december">December</string>
 
     <!-- in January -->
-    <string name="in_january">in January</string>
-    <string name="in_february">in February</string>
-    <string name="in_march">in March</string>
-    <string name="in_april">in April</string>
-    <string name="in_may">in May</string>
-    <string name="in_june">in June</string>
-    <string name="in_july">in July</string>
-    <string name="in_august">in August</string>
-    <string name="in_september">in September</string>
-    <string name="in_october">in October</string>
-    <string name="in_november">in November</string>
-    <string name="in_december">in December</string>
+    <string name="in_january">in januari</string>
+    <string name="in_february">in februari</string>
+    <string name="in_march">in maart</string>
+    <string name="in_april">in april</string>
+    <string name="in_may">in mei</string>
+    <string name="in_june">in juni</string>
+    <string name="in_july">in juli</string>
+    <string name="in_august">in augustus</string>
+    <string name="in_september">in september</string>
+    <string name="in_october">in oktober</string>
+    <string name="in_november">in november</string>
+    <string name="in_december">in december</string>
 
     <string name="monday">Maandag</string>
     <string name="tuesday">Dinsdag</string>
