--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -425,18 +425,18 @@
     <string name="december">Декабрь</string>
 
     <!-- in January -->
-    <string name="in_january">in January</string>
-    <string name="in_february">in February</string>
-    <string name="in_march">in March</string>
-    <string name="in_april">in April</string>
-    <string name="in_may">in May</string>
-    <string name="in_june">in June</string>
-    <string name="in_july">in July</string>
-    <string name="in_august">in August</string>
-    <string name="in_september">in September</string>
-    <string name="in_october">in October</string>
-    <string name="in_november">in November</string>
-    <string name="in_december">in December</string>
+    <string name="in_january">в январе</string>
+    <string name="in_february">в феврале</string>
+    <string name="in_march">в марте</string>
+    <string name="in_april">в апреле</string>
+    <string name="in_may">в мае</string>
+    <string name="in_june">в июне</string>
+    <string name="in_july">в июле</string>
+    <string name="in_august">в августе</string>
+    <string name="in_september">в сентябре</string>
+    <string name="in_october">в октябре</string>
+    <string name="in_november">в ноябре</string>
+    <string name="in_december">в декабре</string>
 
     <string name="monday">Понедельник</string>
     <string name="tuesday">Вторник</string>
