adding 2 new settings section strings

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Scrolling</string>
     <string name="file_operations">File operations</string>
     <string name="recycle_bin">Recycle Bin</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importing…</string>
