--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -368,6 +368,8 @@
     <string name="scrolling">Desplaçament</string>
     <string name="file_operations">Operacions de fitxers</string>
     <string name="recycle_bin">Paperera de reciclatge</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Important…</string>
