--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -365,6 +365,8 @@
     <string name="scrolling">Scrollen</string>
     <string name="file_operations">Dateioperationen</string>
     <string name="recycle_bin">Recycle Bin</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importiere…</string>
