--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -365,6 +365,8 @@
     <string name="scrolling">Desplazamiento</string>
     <string name="file_operations">Operaciones de ficheros</string>
     <string name="recycle_bin">Papelera de reciclaje</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importando…</string>
