--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Défilement</string>
     <string name="file_operations">Opérations sur les fichiers</string>
     <string name="recycle_bin">Corbeille</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importer…</string>
