--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -383,6 +383,8 @@
     <string name="scrolling">Slinkimas</string>
     <string name="file_operations">Bylų operacijos</string>
     <string name="recycle_bin">Šiukšlinė</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importuojama…</string>
