--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Scrollen</string>
     <string name="file_operations">Bestandsoperaties</string>
     <string name="recycle_bin">Prullenbak</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importeren…</string>
