--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -381,6 +381,8 @@
     <string name="scrolling">Przewijanie</string>
     <string name="file_operations">Operacje na plikach</string>
     <string name="recycle_bin">Recycle Bin</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importuję…</string>
