--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -393,6 +393,8 @@
     <string name="scrolling">Прокрутка</string>
     <string name="file_operations">Файловые операции</string>
     <string name="recycle_bin">Корзина</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Импорт…</string>
