--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -365,6 +365,8 @@
     <string name="scrolling">滑動</string>
     <string name="file_operations">檔案操作</string>
     <string name="recycle_bin">回收桶</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
 
     <!-- Import / Export -->
