--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Scrolling</string>
     <string name="file_operations">Filoperationer</string>
     <string name="recycle_bin">Papirkurv</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importerer…</string>
