--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Vierittäminen</string>
     <string name="file_operations">Tiedostot</string>
     <string name="recycle_bin">Recycle Bin</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Tuodaan</string>
