--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Scorrimento</string>
     <string name="file_operations">Operazioni sui file</string>
     <string name="recycle_bin">Cestino</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importazione…</string>
