--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Rolagem</string>
     <string name="file_operations">Operações de arquivos</string>
     <string name="recycle_bin">Recycle Bin</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">Importando…</string>
