--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -366,6 +366,8 @@
     <string name="scrolling">Deslocação</string>
     <string name="file_operations">Operações de ficheiros</string>
     <string name="recycle_bin">Reciclagem</string>
+    <string name="saving_label">Saving</string>
+    <string name="startup">Startup</string>
 
     <!-- Import / Export -->
     <string name="importing">A importar…</string>
