--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -385,6 +385,8 @@
     <string name="scrolling">Skrolovanie</string>
     <string name="file_operations">Súborové operácie</string>
     <string name="recycle_bin">Odpadkový kôš</string>
+    <string name="saving_label">Ukladanie</string>
+    <string name="startup">Po spustení</string>
 
     <!-- Import / Export -->
     <string name="importing">Importovanie…</string>
