--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -385,6 +385,7 @@
     <string name="recycle_bin">Šiukšlinė</string>
     <string name="saving_label">Saving</string>
     <string name="startup">Startup</string>
+    <string name="text">Text</string>
 
     <!-- Import / Export -->
     <string name="importing">Importuojama…</string>
