--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -368,6 +368,7 @@
     <string name="recycle_bin">Prullenbak</string>
     <string name="saving_label">Opslaan</string>
     <string name="startup">Opstarten</string>
+    <string name="text">Text</string>
 
     <!-- Import / Export -->
     <string name="importing">Importeren…</string>
