--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -383,6 +383,7 @@
     <string name="recycle_bin">Recycle Bin</string>
     <string name="saving_label">Saving</string>
     <string name="startup">Startup</string>
+    <string name="text">Text</string>
 
     <!-- Import / Export -->
     <string name="importing">Importuję…</string>
