--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -387,6 +387,7 @@
     <string name="recycle_bin">Odpadkový kôš</string>
     <string name="saving_label">Ukladanie</string>
     <string name="startup">Po spustení</string>
+    <string name="text">Text</string>
 
     <!-- Import / Export -->
     <string name="importing">Importovanie…</string>
