--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -370,6 +370,7 @@
     <string name="recycle_bin">Paperera de reciclatge</string>
     <string name="saving_label">Saving</string>
     <string name="startup">Startup</string>
+    <string name="text">Text</string>
 
     <!-- Import / Export -->
     <string name="importing">Important…</string>
