--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -367,6 +367,7 @@
     <string name="recycle_bin">Papelera de reciclaje</string>
     <string name="saving_label">Saving</string>
     <string name="startup">Startup</string>
+    <string name="text">Text</string>
 
     <!-- Import / Export -->
     <string name="importing">Importando…</string>
