--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -367,6 +367,7 @@
     <string name="recycle_bin">回收桶</string>
     <string name="saving_label">Saving</string>
     <string name="startup">Startup</string>
+    <string name="text">Text</string>
 
 
     <!-- Import / Export -->
