--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -393,9 +393,9 @@
     <string name="scrolling">Прокрутка</string>
     <string name="file_operations">Файловые операции</string>
     <string name="recycle_bin">Корзина</string>
-    <string name="saving_label">Saving</string>
-    <string name="startup">Startup</string>
-    <string name="text">Text</string>
+    <string name="saving_label">Сохранение</string>
+    <string name="startup">Запуск</string>
+    <string name="text">Текст</string>
 
     <!-- Import / Export -->
     <string name="importing">Импорт…</string>
