--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -368,8 +368,8 @@
     <string name="scrolling">Desplaçament</string>
     <string name="file_operations">Operacions de fitxers</string>
     <string name="recycle_bin">Paperera de reciclatge</string>
-    <string name="saving_label">Saving</string>
-    <string name="startup">Startup</string>
+    <string name="saving_label">Desant</string>
+    <string name="startup">Inici</string>
     <string name="text">Text</string>
 
     <!-- Import / Export -->
@@ -403,18 +403,18 @@
     <string name="december">Decembre</string>
 
     <!-- in January -->
-    <string name="in_january">in January</string>
-    <string name="in_february">in February</string>
-    <string name="in_march">in March</string>
-    <string name="in_april">in April</string>
-    <string name="in_may">in May</string>
-    <string name="in_june">in June</string>
-    <string name="in_july">in July</string>
-    <string name="in_august">in August</string>
-    <string name="in_september">in September</string>
-    <string name="in_october">in October</string>
-    <string name="in_november">in November</string>
-    <string name="in_december">in December</string>
+    <string name="in_january">al Gener</string>
+    <string name="in_february">al Febrer</string>
+    <string name="in_march">al Març</string>
+    <string name="in_april">a l\'Abril</string>
+    <string name="in_may">al Maig</string>
+    <string name="in_june">al Juny</string>
+    <string name="in_july">al Juliol</string>
+    <string name="in_august">a l\'Agost</string>
+    <string name="in_september">al Setembre</string>
+    <string name="in_october">a l\'Octubre</string>
+    <string name="in_november">al Novembre</string>
+    <string name="in_december">al Decembre</string>
 
     <string name="monday">Dilluns</string>
     <string name="tuesday">Dimarts</string>
