--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -365,9 +365,9 @@
     <string name="scrolling">Desplazamiento</string>
     <string name="file_operations">Operaciones de ficheros</string>
     <string name="recycle_bin">Papelera de reciclaje</string>
-    <string name="saving_label">Saving</string>
-    <string name="startup">Startup</string>
-    <string name="text">Text</string>
+    <string name="saving_label">Guardando</string>
+    <string name="startup">Puesta en marcha</string>
+    <string name="text">Texto</string>
 
     <!-- Import / Export -->
     <string name="importing">Importando…</string>
@@ -400,18 +400,18 @@
     <string name="december">Diciembre</string>
 
     <!-- in January -->
-    <string name="in_january">in January</string>
-    <string name="in_february">in February</string>
-    <string name="in_march">in March</string>
-    <string name="in_april">in April</string>
-    <string name="in_may">in May</string>
-    <string name="in_june">in June</string>
-    <string name="in_july">in July</string>
-    <string name="in_august">in August</string>
-    <string name="in_september">in September</string>
-    <string name="in_october">in October</string>
-    <string name="in_november">in November</string>
-    <string name="in_december">in December</string>
+    <string name="in_january">en Enero</string>
+    <string name="in_february">en Febrero</string>
+    <string name="in_march">en Marzo</string>
+    <string name="in_april">en Abril</string>
+    <string name="in_may">en Mayo</string>
+    <string name="in_june">en Junio</string>
+    <string name="in_july">en Julio</string>
+    <string name="in_august">en Agosto</string>
+    <string name="in_september">en Septiembre</string>
+    <string name="in_october">en Octubre</string>
+    <string name="in_november">en Noviembre</string>
+    <string name="in_december">en Diciembre</string>
 
     <string name="monday">Lunes</string>
     <string name="tuesday">Martes</string>
